crates/core/tests/rust/snapshots/integration_tests__rust__macro_invocation_dependency_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/macro_invocation_dependency.rs",
  "definitions": [
    {
      "name": "my_macro",
      "position": {
        "start_line": 1,
        "start_column": 14,
        "end_line": 1,
        "end_column": 22
      },
      "definition_type": "MacroDefinition"
    },
    {
      "name": "$e",
      "position": {
        "start_line": 2,
        "start_column": 6,
        "end_line": 2,
        "end_column": 8
      },
      "definition_type": "MacroVariableDefinition"
    },
    {
      "name": "main",
      "position": {
        "start_line": 7,
        "start_column": 4,
        "end_line": 7,
        "end_column": 8
      },
      "definition_type": "FunctionDefinition"
    }
  ],
  "dependencies": [
    {
      "source_line": 3,
      "target_line": 2,
      "symbol": "$e",
      "dependency_type": "MacroVariable",
      "context": "metavariable_use"
    },
    {
      "source_line": 8,
      "target_line": 1,
      "symbol": "my_macro",
      "dependency_type": "VariableUse",
      "context": "variable_use"
    }
  ],
  "usage": [
    {
      "name": "my_macro",
      "kind": "Identifier",
      "position": {
        "start_line": 1,
        "start_column": 14,
        "end_line": 1,
        "end_column": 22
      }
    },
    {
      "name": "$e",
      "kind": "Metavariable",
      "position": {
        "start_line": 2,
        "start_column": 6,
        "end_line": 2,
        "end_column": 8
      }
    },
    {
      "name": "println",
      "kind": "Identifier",
      "position": {
        "start_line": 3,
        "start_column": 9,
        "end_line": 3,
        "end_column": 16
      }
    },
    {
      "name": "$e",
      "kind": "Metavariable",
      "position": {
        "start_line": 3,
        "start_column": 24,
        "end_line": 3,
        "end_column": 26
      }
    },
    {
      "name": "my_macro",
      "kind": "Identifier",
      "position": {
        "start_line": 8,
        "start_column": 5,
        "end_line": 8,
        "end_column": 13
      }
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 9,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
